# extremesealevel2-AFs

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
data/input/: fake_local_total.nc
src/extremesealevel2_AFs/: I_O.py  cli.py  esl_analysis.py  extremesealevel2_AFs_fit.py  extremesealevel2_AFs_preprocess.py  extremesealevel2_AFs_project.py  gesla.py  preprocessing.py
src/extremesealevel2_afs/: I_O.py  cli.py  esl2_afs_preprocess.py  esl2_fit.py  esl2_project.py  esl_analysis.py  extremesealevel2_AFs_fit.py  extremesealevel2_AFs_preprocess.py  extremesealevel2_AFs_project.py  extremesealevel2_afs_fit.py  extremesealevel2_afs_project.py  f1_f2_comparisons.md  gesla.py  preprocessing.py  projecting.py  utils.py
src/extremsealevel2_afs/: I_O.py
