[project]
name = "extremesealevel2-afs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Emma Marshall", email = "emarshall@rhg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "dask[distributed]>=2026.1.1",
    "netcdf4>=1.7.4",
    "numpy>=2.4.0",
    "scipy>=1.17.0",
    "tqdm>=4.67.3",
    "xarray>=2025.12.0",
]

[project.scripts]
extremesealevel2-afs = "extremesealevel2_afs.cli:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
