[project]
name = "extremesealevel2-afs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Emma Marshall", email = "emarshall@rhg.com" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "click>=8.3.1",
    "dask[distributed]>=2026.1.1",
    "netcdf4==1.7.2",
    "numpy==2.2.3",
    "pandas==3.0.2",
    "scipy==1.17.1",
    "tqdm>=4.67.3",
    "xarray==2025.1.2",
]

[project.scripts]
extremesealevel2-afs = "extremesealevel2_afs.cli:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]

[tool.ruff]
exclude = [".claude"]